# Proceso_ETL_Reporte_SCTR_Polars_DuckDB

./: .gitignore  Auditar_Tablas_Delta.py  Carga_Reportes_Emision_Dev.py  Carga_Reportes_Emision_V1.py  Carga_Reportes_PySpark_Dev.py  Ordenar_Parquet_Emision.py  README.md  Support_uv.txt  pyproject.toml  requirements.txt  requirements_new.txt
